K8S-helm/ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: fitnessappnamespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: fitness.tld
      http:
        paths:
          - path: /  # Path prefix for app endpoints
            pathType: Prefix
            backend:
              service:
                name: fitnessappservice  # Name of the app service
                port:
                  number: 80  # Port of the app service
    - host: mongo-express.tld
      http:
        paths:
          - path: /  # Path prefix for app endpoints
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service 
                port:
                  number: 8081  # Port of the app service
